test/types/string/param-coercions.good
param-coercions.chpl:9: In function 'run':
param-coercions.chpl:10: warning: the type 'c_string' is deprecated; please 'use CTypes' and replace 'c_string' with 'c_ptrConst(c_char)'
param-coercions.chpl:11: warning: the type 'c_string' is deprecated; please 'use CTypes' and replace 'c_string' with 'c_ptrConst(c_char)'
param-coercions.chpl:14: warning: the type 'c_string' is deprecated; please 'use CTypes' and replace 'c_string' with 'c_ptrConst(c_char)'
param-coercions.chpl:21: warning: string
param-coercions.chpl:21: warning: ab
param-coercions.chpl:9: In function 'run':
param-coercions.chpl:19: error: unresolved call 'myadd(c_string, c_string)'
param-coercions.chpl:5: note: this candidate did not match: myadd(a: string, b: string)
param-coercions.chpl:19: note: because actual argument #1 with type 'c_string'
param-coercions.chpl:5: note: is passed to formal 'a: string'
param-coercions.chpl:19: note: other candidates are:
param-coercions.chpl:1: note:   myadd(param a: string, param b: string)
